--- a/index.html
+++ b/index.html
@@ -165,10 +165,10 @@
                       </p>
                       <div class="btn-grp">
                         <button class="btn btn-project">Read More</button>
-                        <a href="">
+                        <a href="https://github.com/ankur-chakraborty/my-portfolio/blob/main/README.md" target="_blank">
                           <i title="GitHubLink" class="fa-brands fa-github icon"></i>
                         </a>
-                        <a href="index.html" target="_blank">
+                        <a href="https://ankur-chakraborty.github.io/my-portfolio/" target="_blank">
                           <i title="Live Link" class="fa-solid fa-link icon"></i>
                         </a>
                       </div>
