--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <div class="div-con">
             <div class="nav-bar">
 
-                <div class="nav-logo">
+               <a href="https://ankur-chakraborty.github.io/my-portfolio/"> <div class="nav-logo">
                     <img src="nav_logo2.png" class="logo">
                     <div class="logo-text"><b>Portfolio.</b></div>
-                </div>
+                </div></a>
 
                 <div class="nav-links">
                     <div><a href="#edu">Education</a></div>
