--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
                     <div class="hero-section-right">
                         <div class="user-image">
-                          <img src="me.jpeg" alt="" />
+                          <img src="me.jpg" alt="" />
                         </div>
                   </div>
 
