--- a/index.html
+++ b/index.html
@@ -172,6 +172,34 @@
                       </div>
                     </div>
                   </div>
+
+                  <div class="project-card" id="project3">
+                    <div class="project-number project-number-right">03</div>
+                    <div class="project-content project-content-left">
+                      <div class="project-skill-container">
+                        <img class="project-skill" src="./images/stack/HTML.png" alt="" />
+                        <img class="project-skill" src="./images/stack/CSS.png" alt="" />
+                        <img class="project-skill" src="./images/stack/Javascript.svg" alt="" />
+                        <img class="project-skill" src="./images/stack/Tailwind.png" alt="" />
+                      </div>
+            
+                      <h2 class="project-heading">Razorpay Website</h2>
+                      <p class="project-sub-heading">
+                        A clone website to enhance my development skills using Tailwind CSS.
+                      </p>
+                      <div class="btn-grp">
+                        <button class="btn btn-project">Read More</button>
+                        <a href="https://github.com/ankur-chakraborty/razorpay-clone">
+                          <i title="GitHubLink" class="fa-brands fa-github icon"></i>
+                        </a>
+                        <a href="https://ankur-chakraborty.github.io/razorpay-clone/">
+                          <i title="Live Link" class="fa-solid fa-link icon"></i>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+
+                  
               </div>
   
           </div>
