--- a/index.html
+++ b/index.html
@@ -189,10 +189,10 @@
                       </p>
                       <div class="btn-grp">
                         <button class="btn btn-project">Read More</button>
-                        <a href="https://github.com/ankur-chakraborty/razorpay-clone">
+                        <a href="https://github.com/ankur-chakraborty/razorpay-clone" target="_blank">
                           <i title="GitHubLink" class="fa-brands fa-github icon"></i>
                         </a>
-                        <a href="https://ankur-chakraborty.github.io/razorpay-clone/">
+                        <a href="https://ankur-chakraborty.github.io/razorpay-clone/" target="_blank">
                           <i title="Live Link" class="fa-solid fa-link icon"></i>
                         </a>
                       </div>
