--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
                           I created a portfolio website to showcase my technical skills and projects in a visually engaging and easily accessible manner
                       </p>
                       <div class="btn-grp">
-                        <a href="https://ankur-chakraborty.github.io/my-portfolio/" target="_blank"> <button class="btn btn-project">Read More</button></a>
-                        <a href="https://github.com/ankur-chakraborty/my-portfolio/blob/main/README.md" target="_blank">
+                        <a href="https://github.com/ankur-chakraborty/my-portfolio/blob/main/README.md" target="_blank"> <button class="btn btn-project">Read More</button></a>
+                        <a href="https://github.com/ankur-chakraborty/my-portfolio/tree/main" target="_blank">
                           <i title="GitHubLink" class="fa-brands fa-github icon"></i>
                         </a>
                         <a href="https://ankur-chakraborty.github.io/my-portfolio/" target="_blank">
@@ -188,7 +188,7 @@
                         A clone website to enhance my development skills using Tailwind CSS.
                       </p>
                       <div class="btn-grp">
-                        <a href="https://ankur-chakraborty.github.io/razorpay-clone/" target="_blank"><button class="btn btn-project">Read More</button></a>
+                        <a href="https://github.com/ankur-chakraborty/razorpay-clone/blob/main/README.md" target="_blank"><button class="btn btn-project">Read More</button></a>
                         <a href="https://github.com/ankur-chakraborty/razorpay-clone" target="_blank">
                           <i title="GitHubLink" class="fa-brands fa-github icon"></i>
                         </a>
