--- a/index.html
+++ b/index.html
@@ -391,5 +391,7 @@
       backDelay: 1000,
     });
   </script>
+        <script src="https://kit.fontawesome.com/082fc3605a.js" crossorigin="anonymous"></script>
+
 </body>
 </html>
